# src/accesstoken/accesstoken.open_api.go
@@ -1,0 +1,55 @@
+package accesstoken
+
+import "github.com/maulanar/kms/app"
+
+// OpenAPI is constructor for *openAPI, to autogenerate open api document.
+func OpenAPI() *OpenAPIOperation {
+	return &OpenAPIOperation{}
+}
+
+// OpenAPIOperation embed from app.OpenAPIOperation for simplicity, used for autogenerate open api document.
+type OpenAPIOperation struct {
+	app.OpenAPIOperation
+}
+
+// Base is common detail of referensi open api document component.
+func (o *OpenAPIOperation) Base() {
+	o.Tags = []string{"Login"}
+	o.HeaderParams = []map[string]any{{"$ref": "#/components/parameters/headerParam.Accept-Language"}}
+	o.Responses = map[string]map[string]any{
+		"200": {
+			"description": "Success",
+			"content":     map[string]any{"application/json": &AccessToken{}}, // will auto create schema $ref: '#/components/schemas/Referensi' if not exists
+		},
+		"400": app.OpenAPIError().BadRequest(),
+		"401": app.OpenAPIError().Unauthorized(),
+		"403": app.OpenAPIError().Forbidden(),
+	}
+	o.Securities = []map[string][]string{}
+}
+
+// GetByID is detail of `GET /api/v3/referensi/{id}` open api document component.
+func (o *OpenAPIOperation) GetByID() *OpenAPIOperation {
+	if !app.IS_GENERATE_OPEN_API_DOC {
+		return o // skip for efficiency
+	}
+
+	o.Base()
+	o.Summary = "Get Referensi By ID"
+	o.Description = "Use this method to get Referensi by id"
+	o.PathParams = []map[string]any{{"$ref": "#/components/parameters/pathParam.ID"}}
+	return o
+}
+
+// Create is detail of `POST /api/v3/referensi` open api document component.
+func (o *OpenAPIOperation) Create() *OpenAPIOperation {
+	if !app.IS_GENERATE_OPEN_API_DOC {
+		return o // skip for efficiency
+	}
+
+	o.Base()
+	o.Summary = "Login Session"
+	o.Description = "Use this method to start login session"
+	o.Body = map[string]any{"application/json": &ParamCreate{}}
+	return o
+}
